--- a/src/app/components/cart-item/cart-item-control.component.html
+++ b/src/app/components/cart-item/cart-item-control.component.html
@@ -4,5 +4,5 @@
   <button (click)="cart.addProduct(product)">+</button>
 </span>
 <ng-template #notInCart>
-  <button (click)="cart.addProduct(product)">Add to CArt</button>
+  <button (click)="cart.addProduct(product)">Add to Cart</button>
 </ng-template>
