--- a/src/app/components/cart-widget/cart-widget.component.html
+++ b/src/app/components/cart-widget/cart-widget.component.html
@@ -13,5 +13,5 @@
 <div class="text-center p-4 mt-2">
   <h4>Total : {{ total$ | async }}€</h4>
   <hr />
-  <button class="btn">Checkout</button>
+  <button class="btn btn-primary btn-lg">Checkout</button>
 </div>
